--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,16 @@
+body{
+    background-image: url(../image/task.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+}
 .container{
-    position: absolute;
-    margin: auto;
-    max-width: 1000px;
+    position: relative;
+    max-width: 700px;
+    margin-left: 50%;
+    transform: translate(-50%);
     margin-top: 25px;
     padding: 10px;
-    left: 50%;
-    transform: translatex(-50%);
+    background-color: #8ac6d0AA;
 }
 h1{
     text-align: center;
@@ -15,16 +20,16 @@ input{
     box-sizing: border-box;
     margin-left: 50%;
     transform: translateX(-50%);
-    width: 700px;
-    height: 50px;
+    width: 100%;
+    height: 40px;
     border-radius: 25px;
     font-size: 20px;
 }
 
-button{
+.but{
     margin-left: 50%;
     transform: translateX(-50%);
-    margin-top: 30px;
+    margin-top: 20px;
     padding: 15px;
     font-size: 20px;
     border-radius: 25px;
@@ -32,40 +37,43 @@ button{
 
 li{
     text-align: center;
-    margin-top : 15px;
+    margin-top : 20px;
     list-style: none;
     font-size: 25px;
+    background-color: #36213eAA;
+    border-radius: 10px;
+}
+li:hover{
+    background-color: #b8f3ff;
 }
 .but1{
-    float: none;
+    margin-top: 10px;
+    margin-left: 45%;
 }
+
+
 @media screen and (max-width: 410px){
-    .container{
-        position: absolute;
-        margin: auto;
-        width: 300px;
-        height: 500px;
-        margin-top: 25px;
-        padding: 10px;
-    }
-    h1{
-        text-align: center;
-        margin-bottom: 30px;
+    body{
+        background-image: url(../image/task.jpg);
+        background-repeat: repeat;
+        background-size: cover;
     }
     input{
         box-sizing: border-box;
         margin-left: 50%;
         transform: translateX(-50%);
-        width: 250px;
+        width: 100%;
+        height: 40px;
         border-radius: 25px;
-        font-size: 10px;
+        font-size: 13px;
     }
-    button{
-        margin-left: 50%;
-        transform: translateX(-50%);
-        margin-top: 30px;
-        padding: 15px;
-        font-size: 10px;
-        border-radius: 25px;
+    li{
+        text-align: center;
+        margin-top : 20px;
+        list-style: none;
+        font-size: 18px;
+        background-color: #36213eAA;
+        border-radius: 10px;
     }
+    
 }
